--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -435,7 +435,7 @@
           1.access-path=访问路径
           2.join-algorithm=联接算法
         7.manage-execution-plans=管理执行计划
-  11.performance-whitepaper=性能测试
+  11.performance-test=性能测试
   12.database-proxy=数据库代理
     2.obproxy-management=OBProxy
       2.manage-obproxy-clusters=管理 OBProxy 集群
