--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -8,33 +8,32 @@
     1.experience-scalable-oltp=体验 Scalable OLTP
     5.experience-ddl=体验 DDL
 3.develop=应用开发
-  1.connect-to-oceanbase-database=连接 OceanBase 数据库
-    1.connect-to-oceanbase-database-of-mysql-mode=MySQL 模式
+  1.application-development-of-mysql-mode=基于 MySQL 模式进行应用开发
+    1.connect-to-oceanbase-database-of-mysql-mode=连接 OceanBase 数据库
       14.use-the-database-connection-pool-of-mysql-mode=使用数据库连接池
-    2.connect-to-oceanbase-database-of-oracle-mode=Oracle 模式
-      13.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
-  3.database-object-planning=规划数据库对象
-    1.database-object-planning-of-mysql-mode=MySQL 模式
-    2.database-object-planning-of-oracle-mode=Oracle 模式
-  4.write-data=数据写入
-    1.write-data-of-mysql-mode=MySQL 模式
-    2.write-data-of-oracle-mode=Oracle 模式
-  5.read-data=数据读取
-    1.read-data-of-mysql-mode=MySQL 模式
+    3.database-object-planning-of-mysql-mode=规划数据库对象
+    4.write-data-of-mysql-mode=数据写入
+    5.read-data-of-mysql-mode=数据读取
       2.multi-table-join-query-of-mysql-mode=多表关联查询
       3.use-operators-and-functions-in-query-of-mysql-mode=在查询中使用操作符和函数
-    2.read-data-of-oracle-mode=Oracle 模式
+    6.transaction-in-develop-of-mysql-mode=事务
+      3.transaction-savepoints-of-mysql-mode=保存点
+    7.application-error-handling-specification-and-common-error-solutions=应用程序报错处理规范与常见报错处理
+      1.application-error-handling-specification-of-mysql-mode=应用程序错误处理规范
+      2.common-errors-and-solutions-of-mysql-mode=常见报错与处理
+  2.application-development-of-oracle-mode=基于 Oracle 模式进行应用开发
+    1.connect-to-oceanbase-database-of-oracle-mode=连接 OceanBase 数据库
+      13.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
+    3.database-object-planning-of-oracle-mode=规划数据库对象
+    4.write-data-of-oracle-mode=数据写入
+    5.read-data-of-oracle-mode=数据读取
       2.multi-table-join-query-of-oracle-mode=多表关联查询
       3.use-operators-and-functions-in-query-of-oracle-mode=在查询中使用操作符和函数
-  6.transaction-in-develop=事务
-    1.transaction-in-develop-of-mysql-mode=MySQL 模式
-      3.transaction-savepoints-of-mysql-mode=保存点
-    2.transaction-in-develop-of-oracle-mode=Oracle 模式
+    6.transaction-in-develop-of-oracle-mode=事务
       3.transaction-savepoints-of-oracle-mode=保存点
-  7.application-error-handling-specification-and-common-error-solutions=应用程序报错处理规范与常见报错处理
-    1.application-error-handling-specification=应用程序错误处理规范
-    2.common-errors-and-solutions-of-mysql-mode=常见报错与处理（MySQL 模式）
-    3.common-errors-and-solutions-of-oracle-mode=常见报错与处理（Oracle 模式）
+    7.application-error-handling-specification-and-common-error-solutions-of-oracle-mode=应用程序报错处理规范与常见报错处理
+      1.application-error-handling-specification-of-oracle-mode=应用程序错误处理规范
+      2.common-errors-and-solutions-of-oracle-mode=常见报错与处理
 4.deploy=部署数据库
   3.deploy-oceanbase-enterprise-edition=部署 OceanBase 企业版
     2.preparations-before-deploy=部署前准备
