--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -112,6 +112,27 @@
       300.sql-monitor=SQL 监控
   800.logging=日志
     600.view-logs=查看日志
+    9.performance-tuning=性能调优
+    3.identify-bottlenecks-within-components=识别组件内的瓶颈
+      4.performance-bottlenecks-of-observer=OBServer 端性能瓶颈
+        2.not-the-best-plan=非最优计划
+    4.sql-tuning=SQL 调优
+      2.execution-plan-optimization=执行计划优化
+        1.statistics-and-cost-based-optimization=统计信息和估行机制
+          2.statistic-information=统计信息
+            2.collect-statistic-information=收集统计信息
+            4.manage-statistic-information=管理统计信息
+          3.cost-based-optimization=优化器估行机制
+        2.plan-management=计划管理
+        3.index-selection=索引选择
+        4.join-order-and-join-algorithm=连接
+          2.join-algorithm=连接算法
+        5.order-by-and-limit=排序和 limit 优化
+      4.business-logic-optimization=业务逻辑优化
+  10.troubleshooting=错误处理
+    4.storage=存储
+    5.election=选举
+    6.transaction=事务
   900.daily-inspection=日常巡检
     900.full-link-detection=全链路追踪
   1100.emergency-response=应急处理
