420：demo Synchronize modifications

--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -28,6 +28,7 @@
       1300.use-the-database-connection-pool-of-oracle-mode=使用数据库连接池
     200.sample-program-of-oracle-mode=示例程序
       100.java-of-oracle-mode=Java
+      300.c-of-oracle-mode=C/C++
     300.database-object-planning-of-oracle-mode=规划数据库对象
     400.write-data-of-oracle-mode=数据写入
     500.read-data-of-oracle-mode=数据读取
