--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -59,6 +59,9 @@
   400.migrate-data-from-oracle-database-to-oceanbase-database=从 Oracle 数据库迁移数据到 OceanBase 数据库
   500.migrate-data-from-oceanbase-database-to-oracle-database=从 OceanBase 数据库迁移数据到 Oracle 数据库
   600.migrate-data-from-db2-luw-database-to-oceanbase-database=从 DB2 数据库迁移数据到 OceanBase 数据库
+  610.migrate-data-from-oceanbase-database-to-db2-luw-database=从 OceanBase 数据库迁移数据到 DB2 数据库
+  620.migrate-data-from-tidb-database-to-oceanbase-database=从 TiDB 数据库迁移数据到 OceanBase 数据库
+  640.migrate-data-from-postgresql-database-to-oceanbase-database=从 PostgreSQL 数据库迁移数据到 OceanBase 数据库
   700.migrate-data-from-csv-file-to-oceanbase-database=从 CSV 文件迁移数据到 OceanBase 数据库
   900.data-migration-between-oceanbase-databases=OceanBase 数据库之间迁移数据
   1000.use-sql-statements-migrate-data=使用 SQL 语句迁移数据
