--- a/.menu_map_zh-CN.yml
+++ b/.menu_map_zh-CN.yml
@@ -70,6 +70,8 @@
   100.cluster-management=集群管理
     100.cluster-management-overview=集群介绍
     300.common-cluster-operations=集群常见操作
+      1500.oceanbase-version-upgrade=OceanBase 版本升级
+        100.oceanbase-cluster-version-upgrade=OceanBase 集群版本升级
     400.common-cluster-failure=集群常见故障处理
   200.tenant-management=租户管理
     600.common-tenant-operations=租户常见操作
